--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,32 +1,6 @@
-<<<<<<< HEAD
-annotated-types==0.7.0
-anyio==4.10.0
-click==8.2.1
-colorama==0.4.6
-Deprecated==1.2.18
-fastapi==0.116.1
-h11==0.16.0
-httptools==0.6.4
-idna==3.10
-limits==5.5.0
-packaging==25.0
-pydantic==2.11.7
-pydantic_core==2.33.2
-python-dotenv==1.1.1
-PyYAML==6.0.2
-slowapi==0.1.9
-sniffio==1.3.1
-starlette==0.47.2
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-uvicorn==0.35.0
-watchfiles==1.1.0
-websockets==15.0.1
-wrapt==1.17.2
-=======
 fastapi==0.111.0
 uvicorn[standard]==0.30.1
 numpy==2.0.0
+pandas==2.2.2
+scipy==1.14.0
 slowapi==0.1.9
-
->>>>>>> 2f92e808f39c58a37765da9974eae0ee5bcab045
