--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.111.0
 uvicorn[standard]==0.30.1
 numpy==2.0.0
-pandas==2.2.2
+pandas==2.2.2 --only-binary=:all:
 scipy==1.14.0
 slowapi==0.1.9
