--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: finance-volatility-api
     env: python
-    buildCommand: pip install -r backend/requirements.txt
-    startCommand: cd backend && ./start.sh
+    buildCommand: pip install -r requirements.txt
+    startCommand: ./start.sh
     plan: free
     envVars:
       - key: PORT
